--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <!-- 按需导入element plus部分组件样式错误(其中包含messagebox样式)可以通过unpkg方式导入样式 -->
+    <link rel="stylesheet" href="//unpkg.com/element-plus@2.2.9/dist/index.css" />
   </head>
   <body>
     <div id="app"></div>
